--- a/gb/18/8/31/n10679835.md
+++ b/gb/18/8/31/n10679835.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fyaq233/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fyaq233/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fyaq233/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>橙县升级防护围栏阻游民营</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/08/1-14-1-600x400.jpg" />
 <h6>8月30日（周四），橙县县政委员会主席Andrew Do（右三）召开新闻发布会表示，橙县已在防洪渠道周围安装了升级版的防护围栏，防止无家可归者搭建营地。（橙县县政委员会提供）
 </h6>
 <hr>
-	<p>【大纪元2018年08月31日讯】（大纪元记者姜琳达编译报导）为了加强公共安全，8月30日（周四），<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E6%A9%99%E5%8E%BF.md#1">橙县</a>县政委员会主席Andrew Do召开新闻发布会表示，橙县已在<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E9%98%B2%E6%B4%AA%E6%B8%A0%E9%81%93.md#1">防洪渠道</a>（Flood Control Channels）周围的24个地点，安装了升级版的<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E9%98%B2%E6%8A%A4%E5%9B%B4%E6%A0%8F.md#1">防护围栏</a>，防止<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E6%97%A0%E5%AE%B6%E5%8F%AF%E5%BD%92%E8%80%85.md#1">无家可归者</a>搭建营地。</p>
-<figure id="attachment_10680040" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/08/GardenGrove.png"><img class="size-large wp-image-10680040" src="https://i.epochtimes.com/assets/uploads/2018/08/GardenGrove-600x273.png" alt="" width="600" b="273" /></a><figcaption class="wp-caption-text">园林市（Garden Grove）一处安装了升级版<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E9%98%B2%E6%8A%A4%E5%9B%B4%E6%A0%8F.md#1">防护围栏</a>的前后对比图。（<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E6%A9%99%E5%8E%BF.md#1">橙县</a>县政委员会提供）</figcaption></figure>
-<p>目前，防护围栏集中在园林市（Garden Grove）、Westminster和圣安娜（Santa Ana）。Andrew Do表示，居民有权生活在一个安全的社区。而这种安全围栏将大大减少<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E6%97%A0%E5%AE%B6%E5%8F%AF%E5%BD%92%E8%80%85.md#1">无家可归者</a>进入<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E9%98%B2%E6%B4%AA%E6%B8%A0%E9%81%93.md#1">防洪渠道</a>，也作为防止未来无家可归者搭建营地的一种方式。</p>
-<figure id="attachment_10680042" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/08/Westminster.png"><img class="size-large wp-image-10680042" src="https://i.epochtimes.com/assets/uploads/2018/08/Westminster-600x279.png" alt="" width="600" b="279" /></a><figcaption class="wp-caption-text">Westminster一处安装了升级版防护围栏的前后对比图。（橙县县政委员会提供）</figcaption></figure>
+	<p>【大纪元2018年08月31日讯】（大纪元记者姜琳达编译报导）为了加强公共安全，8月30日（周四），<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A9%99%E5%8E%BF.md#1">橙县</a>县政委员会主席Andrew Do召开新闻发布会表示，橙县已在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B2%E6%B4%AA%E6%B8%A0%E9%81%93.md#1">防洪渠道</a>（Flood Control Channels）周围的24个地点，安装了升级版的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B2%E6%8A%A4%E5%9B%B4%E6%A0%8F.md#1">防护围栏</a>，防止<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%A0%E5%AE%B6%E5%8F%AF%E5%BD%92%E8%80%85.md#1">无家可归者</a>搭建营地。</p>
+<figure id="attachment_10680040" aria-describedby="caption-attachment-10680040" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/08/GardenGrove.png"><img class="size-large wp-image-10680040" src="https://i.epochtimes.com/assets/uploads/2018/08/GardenGrove-600x273.png" alt="" width="600" b="273" /></a><figcaption id="caption-attachment-10680040" class="wp-caption-text">园林市（Garden Grove）一处安装了升级版<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B2%E6%8A%A4%E5%9B%B4%E6%A0%8F.md#1">防护围栏</a>的前后对比图。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A9%99%E5%8E%BF.md#1">橙县</a>县政委员会提供）</figcaption></figure>
+<p>目前，防护围栏集中在园林市（Garden Grove）、Westminster和圣安娜（Santa Ana）。Andrew Do表示，居民有权生活在一个安全的社区。而这种安全围栏将大大减少<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%A0%E5%AE%B6%E5%8F%AF%E5%BD%92%E8%80%85.md#1">无家可归者</a>进入<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B2%E6%B4%AA%E6%B8%A0%E9%81%93.md#1">防洪渠道</a>，也作为防止未来无家可归者搭建营地的一种方式。</p>
+<figure id="attachment_10680042" aria-describedby="caption-attachment-10680042" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/08/Westminster.png"><img class="size-large wp-image-10680042" src="https://i.epochtimes.com/assets/uploads/2018/08/Westminster-600x279.png" alt="" width="600" b="279" /></a><figcaption id="caption-attachment-10680042" class="wp-caption-text">Westminster一处安装了升级版防护围栏的前后对比图。（橙县县政委员会提供）</figcaption></figure>
 <p>Do通过与各市领导、县工作人员和执法机构合作后，也了解到目前当地的一些犯罪行为和数据，其中就包括制造了一系列火灾的无家可归纵火犯加西亚（Gustavo Abarca Garcia）。</p>
 <p>地区检察官Tony Rackauckas说： “感谢Andrew Do在保护社区安全所发挥的领导作用。无家可归者往往被视为受害者，然而其中许多人在社区制造各种问题并犯下严重罪行。橙县地方检察官办公室也记录了多起涉及到无家可归者的案件。”</p>
 <p>Tony Rackauckas曾对加西亚提起多项重罪指控。指控中指出，该人在今年7月制造了多场火灾。其中一场是在圣安娜河的围栏上放火，导致大火蔓延到一居民家后院，烧毁了露台家具、植被等，直接损失超过2万美元。该火灾受害者屋主也出现在30日的发布会现场。</p>
@@ -22,36 +22,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/3/28/n10257824.md#1">市议员：改善无家可归者现状需数百万元</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/4/21/n10323722.md#1">移民申请期间妇女无家可归者众</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/5/2/n10356909.md#1">无家可归者住房计划受市议会支持</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/6/14/n10483215.md#1">无家可归者寄宿中心改造费用增加100万美元</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/28/n10257824.md#1">市议员：改善无家可归者现状需数百万元</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/4/21/n10323722.md#1">移民申请期间妇女无家可归者众</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/2/n10356909.md#1">无家可归者住房计划受市议会支持</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/14/n10483215.md#1">无家可归者寄宿中心改造费用增加100万美元</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/28/n10257597.md#1" target="_blank">中共淫乱的前生今世（8）党官淫乱校园</a></li><li><a href="https://github.com/fyaq233/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/11/n9947822.md#1" target="_blank">文革中自杀的几个名人（2）文联主席老舍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12052901.md#1">分析：金正恩残废或病故 中共恶梦将成真</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12050955.md#1">【拍案惊奇】谁接班金正恩？传习在秦岭探军工</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/23/n12054189.md#1">【翻墙必看】金正恩或脑残 令中共雪上加霜</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/23/n12053941.md#1">【拍案惊奇】骇客攻武汉病毒所 京城面临大清洗</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12053085.md#1">【一线采访】习近平突访西安 到处是便衣</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/20/n12046904.md#1">卡卡捧谭德塞遭批 其母亲与WHO关系被起底</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/21/n12050674.md#1">郎朗参加全球抗疫音乐会 国籍标注美国引热议</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/23/n12054555.md#1">周扬青认分手 亲揭罗志祥这些年花心不断</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12053302.md#1">三月大婴儿趴睡死亡 马伊琍斥：专家是刽子手</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12053668.md#1">日子难过？ 王思聪当游戏陪练赚钱 引热议</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12051978.md#1">印度专家：5000年前文献“预言”中共病毒</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/4/n12003303.md#1">修行高人 开通阴阳两界为哪桩？</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/13/2/18/n3803627.md#1">米开朗基罗（5）《圣家族》</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/19/n12043816.md#1">应运出世? 华盛顿佩剑出征</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/11/n12022063.md#1">赞美人“八斗之才” 余下二斗给了谁？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fyaq233/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fyaq233/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/31/n10679835.htm">橙县升级防护围栏阻游民营</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/31/n10679835.htm">橙县升级防护围栏阻游民营</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fyaq233/djy/blob/master/gb/18/8/31/n10679835.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fyaq233/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fyaq233/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fyaq233/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/8/31/n10679835.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
